[metadata]
name = World Bank GEE Zonal
author = Devevelopment Data Group
author_email = github@worldbank.org
maintainer = Andres Chamorro
maintainer_email = achamorroelizond@worldbank.org
version = 0.1.0
description = This package contains two classes to ease the process of getting statistics from Google Earth Engine datasets
long_description = file: README.md, LICENSE.md
keywords =
license = World Bank Master Community License Agreement
classifiers =
    Programming Language :: Python :: 3
    License :: World Bank Master Community License Agreement
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    earthengine-api>=0.1.342
    pandas>=1.2.2

[options.packages.find]
where=src